--- a/src/app/paginas/listagem/listagem.component.html
+++ b/src/app/paginas/listagem/listagem.component.html
@@ -20,7 +20,23 @@
                 <tr *ngFor="let prof of professores">
                     <td>{{prof.nome}}</td>
                     <td>{{prof.qtdMaterias}}</td>
-                    <td><button type="button" class="btn btn-primary">Detalhes</button></td>
+                    <td><button type="button" class="btn btn-primary" (click)="getProfessor(prof.id)" >Detalhes</button></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+        <div *ngIf="idProfessor > 0" class="col-md-4">
+            <button class="btn btn-danger" (click)="getProfessor(0)">X</button><br />
+            <span>Matérias do(a) professor(a) <b>{{Professor}}</b></span>
+            <table class="table table-striped table-bordered">
+                <thead>
+                <tr>
+                    <th scope="col">Matéria</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr *ngFor="let mat of profMaterias">
+                    <td>{{mat.nomeMateria}}</td>
                 </tr>
                 </tbody>
             </table>
@@ -49,7 +65,7 @@
                 <tr *ngFor="let mat of materias">
                     <td>{{mat.nome}}</td>
                     <td>{{mat.qtdProfessores}}</td>
-                    <td><button type="button" class="btn btn-primary">Detalhes</button></td>
+                    <td><button type="button" class="btn btn-primary" (click)="getMateria(mat.id)" >Detalhes</button></td>
                 </tr>
                 </tbody>
             </table>
