aviso matérias sem professores

--- a/src/app/navegacao/footer/footer.component.html
+++ b/src/app/navegacao/footer/footer.component.html
@@ -1,1 +1,11 @@
-<p>@Alexandre Campos Montalvão - <a href="https://github.com/alexandrecamposmon/App_Materias-Professores" target="_blank">GitHub deste projeto </a></p>
+<!-- Footer -->
+<footer class="page-footer font-small bg-primary">
+
+    <!-- Copyright -->
+    <div class="footer-copyright text-left py-3">© 2020 Copyright:
+        <a href="https://github.com/alexandrecamposmon/App_Materias-Professores" style="color: black;" target="_blank">GitHub deste projeto </a>
+    </div>
+    <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
