alteracao final para envio

--- a/src/app/paginas/listagem/listagem.component.html
+++ b/src/app/paginas/listagem/listagem.component.html
@@ -106,7 +106,7 @@
                     </tbody>
                 </table>
             </div>
-            <div *ngIf="matProfessores.length == 0" class="alert alert-danger">
+            <div *ngIf="matProfessores.length == 0" style="margin-top: 20px;" class="alert alert-danger">
                 <span>ATENÇÃO: A matéria {{Materia}} <b>NÃO</b> tem professores(as) aptos(as)</span>
             </div>
         </div>
