--- a/src/app/navegacao/menu/menu.component.html
+++ b/src/app/navegacao/menu/menu.component.html
@@ -8,9 +8,9 @@
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/listagem']">Listagem</a>
         </li>
-        <!-- <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/aviso']">Avisos</a>
-        </li> -->
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/dashboard']">Dashboard</a>
+        </li>
       </ul>
     </div>
   </nav>
