--- a/src/app/paginas/dashboard/dashboard.component.html
+++ b/src/app/paginas/dashboard/dashboard.component.html
@@ -1,1 +1,56 @@
-<p>dashboard works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="form">
+                <h1>DASHBOARD - PROFESSORES E MATÉRIAS</h1>
+                <hr />
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="form">
+                <h3>Professores(as) x Matérias</h3>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-8">
+            <div>
+                <div>
+                    <div>
+                        <div style="display: block">
+                            <canvas baseChart [datasets]="barChartData" [labels]="barChartLabels" [options]="barChartOptions"
+                                [legend]="barChartLegend" [chartType]="barChartType" (chartHover)="chartHovered($event)"
+                                (chartClick)="chartClicked($event)"></canvas>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <hr />
+    
+    <div class="row">
+        <div class="col-md-12">
+            <div class="form">
+                <h3>Matérias x Professores(as)</h3>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-8">
+            <div>
+                <div>
+                    <div>
+                        <div style="display: block">
+                            <canvas baseChart [datasets]="barChartDataM" [labels]="barChartLabelsM" [options]="barChartOptionsM"
+                                [legend]="barChartLegendM" [chartType]="barChartTypeM" (chartHover)="chartHovered($event)"
+                                (chartClick)="chartClicked($event)"></canvas>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
